--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-   Monae is here !!!
+  <h1>Monae</h1>
+  <h2>Frontend Simplified</h2>
+
+  <p>Frontend Simplified</p>
+  <p>Frontend Simplified</p>
+  <p>Frontend Simplified</p>
+  <p>Frontend Simplified</p>
+  <p>Frontend Simplified</p>
+  <p>Frontend Simplified</p>
+  <button>submit</button>
+  <button>submit</button>
+  <button>submit</button>
+  <div>
+  <B>bold</B>
+</div>
+  <b>bold</b>
+  <b>bold</b>
+  <a href="/dashboard.html" target="blank">dashboard</a>
+
 </body>
 </html>
